Thu Apr 19 23:15:10 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_AMI_Impl.cpp
        * DAnCE/DomainApplicationManager/DomainApplicationManager_AMI_Impl.h
        
          Added a centrallized map to track the status of the AMI callback
          return status.
        
        * DAnCE/DomainApplicationManager/Reply_Handler_i.cpp
        * DAnCE/DomainApplicationManager/Reply_Handler_i.h

          Added a DomainApplicationManager_AMI_Impl object as a member
          variable for callback purpose, i.e., notifiying this object
          as soon as a AMI call returns.
        
        * DAnCE/ExecutionManager/Execution_Manager.cpp

          Added usage info printout about using AMI.
        
Thu Apr 19 18:29:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/NodeApplicationTest/run_test.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_simple.pl:
        * examples/BasicSP/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test.pl:
        * performance-tests/Benchmark/Multi_Threaded/run_test.pl:
        * performance-tests/Benchmark/RoundTrip/run_test.pl:
        * performance-tests/Benchmark/RoundTripClient/run_test.pl:
        * performance-tests/Benchmark/RoundTripClient/run_test_ior_cad.pl:
          Use $PerlACE::wait_interval_for_process_creation

Sun Apr 15 19:20:32 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIDLC/ServantSourceGenerator.cpp:
          Fixed bug 2892, thanks to Abdul Sowayan for reporting this.

Wed Apr 11 11:48:32 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:

          Removed the stray '\' I accidentally added yesterday.

Tue Apr 10 17:23:16 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * examples/BasicSP/BasicSP.mwc:  Added SVN Id tag to remove Fuzz