@@ -1,3 +1,9 @@
+Fri Apr 20 19:08:43 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
+        
+          Modified to make the debug message more informative.
+        
 Thu Apr 19 23:15:10 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DAnCE/DomainApplicationManager/DomainApplicationManager_AMI_Impl.cpp
